# twilize

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  Procfile  README.md  mcp-server.json  pyproject.toml  railway.extension.json  railway.json  railway.toml  requirements.txt  smithery.yaml  template.twb  test_diff.py  test_empty.twb
docs/: MCP_SERVER.md  PUBLISHING_SMITHERY.md  PUBLISHING_TREX.md  ROADMAP.md  tableau_all_functions.json  tableau_all_functions.md  tableau_functions_reference.json
examples/: README.md  all_supported_charts.py  demo_connections.py
examples/layouts/: layout_executive.json
examples/migrate_workflow/: 5 KPI Design Ideas (2).twb  README.md  prompt.txt  test_migration_workflow.py
examples/prompts/: README.md  all_supported_charts_showcase_en.md  demo_auto_layout4_prompt.md  demo_c2_layout_prompt.md  demo_declarative_layout_prompt.md  demo_simple.md  overview_business_demo.md  overview_natural zh_cn.md  overview_natural_en.md  test_parameter_prefix_bug.md
examples/screenshot2layout/: layout_dashboard1.json  layout_dashboard2.json
examples/scripts/: demo_all_supported_charts.py  demo_all_supported_charts_mcp.py  demo_auto_layout4.py  demo_connections.py  demo_declarative_layout.py  demo_e2e_mcp_workflow.py  demo_hyper_and_new_charts.py
examples/superstore_recreated/: Exec Overview Recreated 1401.twb  Exec Overview Recreated 1626.twb  Exec Overview Recreated 1637.twb  Exec Overview Recreated 1814.twb  Exec Overview Recreated 2224.twb  Exec Overview Recreated correct.twb  Exec Overview Recreated.twb  RECREATE_REPORT.md  build_exec_overview.py
extension/backend/: app.py  chart_suggestion.py  image_analysis.py  pipeline.py  schema_inference.py
extension/backend/tests/: test_route_a_integration.py  test_schema_inference.py  test_suggestion.py
extension/frontend/: index.html  package.json
extension/frontend/public/: tableau.extensions.min.js
extension/frontend/src/: App.tsx
extension/manifest/: cwtwb-extension.trex  twilize-extension-production.trex  twilize-extension.trex
extension/scripts/: start.py
layout/: Tableau Dashboard Layout Templates.twb
rules/: dashboard_rules.yaml
src/cwtwb/: __init__.py  c3_layout.py  capability_registry.py  chart_suggester.py  charts.py  config.py  connections.py  csv_to_hyper.py  dashboard_actions.py  dashboard_enhancements.py  dashboard_layouts.py  dashboards.py  field_registry.py  layout.py  layout_model.py  layout_rendering.py  layout_templates.py  migration.py  parameters.py  pipeline.py  server.py  themes.py  trend_lines.py  twb_analyzer.py  twb_editor.py  validator.py
src/cwtwb/charts/: __init__.py  builder_base.py  builder_basic.py  builder_dual_axis.py  builder_maps.py  builder_pie.py  builder_text.py  dispatcher.py  helpers.py  pattern_mapping.py  routing_policy.py
src/cwtwb/mcp/: __init__.py  app.py  resources.py  state.py  tools_layout.py  tools_migration.py  tools_pipeline.py  tools_support.py  tools_workbook.py
src/cwtwb/references/: Sample _ Superstore (Simple).xls
src/twilize/: __init__.py  __main__.py  c3_layout.py  calc_field_validator.py  capability_registry.py  chart_suggester.py  config.py  connections.py  csv_to_hyper.py  dashboard_actions.py  dashboard_dependencies.py  dashboard_enhancements.py  dashboard_rules.py  dashboards.py  data_profiler.py  docapi_bridge.py  field_registry.py  formula_validator.py  knowledge_base.py  layout.py  layout_model.py  layout_rendering.py  layout_templates.py  migration.py  pipeline.py  prompt_interpreter.py  reference_lines.py  rules_cli.py  rules_engine.py  rules_inference.py  schema_inference.py  server.py  style_presets.py  style_reference.py  template_decider.py  themes.py  twb_analyzer.py  twb_editor.py  validator.py  viz_best_practices.py
src/twilize/charts/: __init__.py  builder_base.py  builder_basic.py  builder_dual_axis.py  builder_maps.py  builder_pie.py  builder_text.py  dispatcher.py  helpers.py  routing_policy.py  showcase_recipes.py
src/twilize/gallery/: executive-summary.yaml  geo-explorer.yaml  kpi-detail.yaml  left-filter.yaml
src/twilize/mcp/: __init__.py  app.py  resources.py  snapshot.py  state.py  tools_intelligence.py  tools_migration.py  tools_pipeline.py  (+2 more)
templates/: Sample - Superstore - simple.xls  Sample - Superstore.xls
templates/gallery/: comparison.yaml  executive-briefing.yaml  trend-analysis.yaml
templates/layout/: Tableau Dashboard Layout Templates.twb
templates/migrate/: 5 KPI Design Ideas (2).twb
templates/twb/: superstore - localmysql.twb  superstore - tableauserver.twb  superstore copy.twb  superstore.twb
templates/viz/: Tableau Advent Calendar.twb  pie_chart.twb
tests/: README.md  conftest.py  parse_twb.py  test_c2_replica.py  test_calc_field_validator.py  test_capability_registry.py  test_chart_routing.py  test_chart_suggester.py  test_charts.py  test_connections.py  test_csv_schema_inference.py  test_dashboard_action_types.py  test_dashboard_actions.py  test_debug.py  test_declarative_dashboards.py  test_docapi_bridge.py  test_dual_axis_advanced.py  test_dual_axis_basic.py  test_dual_axis_script.py  test_e2e.py  test_empty.twb  test_error_handling.py  test_existing_workbook_editing.py  test_field_registry.py  test_formula_validator.py  test_generate_pie.py  test_interactive_features.py  test_kpi_role_and_mcp_errors.py  test_label_runs.py  test_layout_ascii.py  test_level1_features.py  test_mcp_showcase_workbook.py  test_mcp_tools.py  test_migration_workflow.py  test_overview_full.py  test_overview_replica.py  test_phase10_dashboard_polish.py  test_prompt_interpreter.py  test_reference_lines.py  test_screenshot2layout.py  (+6 more)
vizs/: pie_chart.twb
(+22 files in other folders)
