[project]
name = "cwtwb"
version = "0.8.0"
description = "Tableau Workbook (.twb) generation toolkit and MCP server"
readme = "README.md"

requires-python = ">=3.10"
keywords = ["tableau", "twb", "mcp", "visualization", "workbook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "lxml>=5.0",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
examples = [
    "tableauhyperapi>=0.0.21408",
]

[project.scripts]
cwtwb = "cwtwb.server:main"

[project.urls]
Homepage = "https://github.com/imgwho/cwtwb"
Changelog = "https://github.com/imgwho/cwtwb/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling<1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]

[tool.hatch.build.targets.wheel]
packages = ["src/cwtwb"]
artifacts = [
  "src/cwtwb/skills/*.md",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.env",
  "/.venv",
  "/venv/",
  "/env/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
