[project]
name = "twilize"
version = "0.16.0"
description = "Tableau Workbook (.twb) generation toolkit and MCP server"
authors = [{name = "Suddhasheel Bhattacharya", email = "suddhasheel.bhattacharya@gmail.com"}]
readme = "README.md"

license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
keywords = ["tableau", "twb", "twbx", "mcp", "visualization", "workbook", "dashboard", "charts", "bi", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Office/Business",
    "Typing :: Typed",
]
dependencies = [
    "lxml>=5.0",
    "mcp[cli]>=1.0",
    "xlrd>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
examples = [
    "tableauhyperapi>=0.0.21408",
]
pipeline = [
    "tableauhyperapi>=0.0.21408",
]
docapi = [
    "tableaudocumentapi>=0.5",
]
extension = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "tableauhyperapi>=0.0.21408",
    "python-multipart",
]

[project.scripts]
twiize = "twilize.server:main"

[project.urls]
Homepage = "https://github.com/subhatta123/twilize"
Documentation = "https://github.com/subhatta123/twilize/blob/main/docs/MCP_SERVER.md"
Repository = "https://github.com/subhatta123/twilize"
Changelog = "https://github.com/subhatta123/twilize/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/subhatta123/twilize/issues"

[build-system]
requires = ["hatchling<1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]

[tool.hatch.build.targets.wheel]
packages = ["src/twilize"]
# All non-Python files under src/twilize/ (skills/*.md, references/*) are
# git-tracked and included in the wheel automatically via `packages`.

[tool.hatch.build.targets.sdist]
exclude = [
  "/.env",
  "/.venv",
  "/venv/",
  "/env/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
